--- a/_posts/2022-03-23-measuring-protein-concentration/measuring-protein-concentration.Rmd
+++ b/_posts/2022-03-23-measuring-protein-concentration/measuring-protein-concentration.Rmd
@@ -24,6 +24,17 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r, xaringanExtra-clipboard, echo=FALSE}
+htmltools::tagList(
+  xaringanExtra::use_clipboard(
+    button_text = "<i class=\"fa fa-clone fa-2x\" style=\"color: #301e64\"></i>",
+    success_text = "<i class=\"fa fa-check fa-2x\" style=\"color: #90BE6D\"></i>",
+    error_text = "<i class=\"fa fa-times fa-2x\" style=\"color: #F94144\"></i>"
+  ),
+  rmarkdown::html_dependency_font_awesome()
+)
+```
+
 How do we go about measuring protein concentration?
 
 ```{r}
@@ -72,7 +83,8 @@ For this we can use the `std_curve_predict()` function, which takes a model outp
 std_curve_predict(
   model = our_curve, 
   unknowns = unknowns
-  )
+  ) %>% 
+  knitr::kable()
 ```
 
 
